// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > model > removeModel > success empty 1`] = `
[
  {
    "modelId": "modelId",
    "semvers": [],
  },
  [],
  undefined,
  [],
  undefined,
  [],
  undefined,
  [],
  undefined,
  {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "find": [MockFunction],
    "findByIdAndUpdate": [MockFunction],
    "findOne": [MockFunction] {
      "calls": [
        [
          {
            "id": "modelId",
          },
        ],
        [
          {
            "id": "modelId",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "findOneAndUpdate": [MockFunction],
    "lookup": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "settings": {
      "mirror": {
        "sourceModelId": "",
      },
    },
    "sort": [MockFunction],
    "updateOne": [MockFunction],
  },
]
`;

exports[`services > model > removeModel > success entries 1`] = `
[
  {
    "modelId": "modelId",
    "semvers": [
      "1.2.3",
      "1.2.3",
      "1.2.3",
    ],
  },
  [
    undefined,
    undefined,
    undefined,
  ],
  undefined,
  [
    {
      "findByIdAndDelete": [MockFunction] {
        "calls": [
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
          {
            "type": "return",
            "value": [Circular],
          },
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
    },
    {
      "findByIdAndDelete": [MockFunction] {
        "calls": [
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
          {
            "type": "return",
            "value": [Circular],
          },
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
    },
    {
      "findByIdAndDelete": [MockFunction] {
        "calls": [
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
          [
            "6776901b879d08e34b599d7e",
            undefined,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
          {
            "type": "return",
            "value": [Circular],
          },
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
    },
  ],
  undefined,
  [
    undefined,
    undefined,
    undefined,
  ],
  undefined,
  [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  undefined,
  {
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "find": [MockFunction],
    "findByIdAndUpdate": [MockFunction],
    "findOne": [MockFunction] {
      "calls": [
        [
          {
            "id": "modelId",
          },
        ],
        [
          {
            "id": "modelId",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "findOneAndUpdate": [MockFunction],
    "lookup": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "settings": {
      "mirror": {
        "sourceModelId": "",
      },
    },
    "sort": [MockFunction],
    "updateOne": [MockFunction],
  },
]
`;
